Prevent word wrap on small devices

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -60,6 +60,8 @@
 			align-items: center;
 			justify-content: center;
 			text-align: center;
+			white-space: nowrap;
+			overflow: hidden;
 			margin: 0;
 			padding: 0;
 			font-size: 120%;
